tests/test0148.exp
Parse error, unexpected { ( tests/test0148.ctr: 2 )
Expeted a dot (.).
